Fixed minor alignment issue in projects.html

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ a {
 .info-text {
   padding: 1em;
   margin: 0;
+  text-align: center;
 }
 
 .contact-strip a {
